--- a/index.html
+++ b/index.html
@@ -6,16 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="styles.css" rel="stylesheet">
-    <style>
-        img {
-            filter: brightness(1.2) saturate(2.7) contrast(0.7) hue-rotate(340deg)
-        }
-    </style>
 </head>
-
-
-
-
 <body>
     <svg width="0" height="0">
         <defs>
@@ -26,12 +17,19 @@
         </defs>
     </svg>
     <div class="background">
-        <div class="fancy-hole" id="border-hole"></div>
-        <div class="fancy-hole" id="border-hole1"></div>
         <div class="fancy-hole" id="overlay-hole"></div>
             <div class="fancy-hole">
                 <img src="./intro2.gif" alt="Fancy Background">
             </div>
+        <div class="login-container">
+            <h4 id="welcome">Welcome To</h1>
+            <h1 id="family-cloud-heading">Our Family Cloud</h1>
+            <div class="login-form">
+                <input type="text" placeholder="Username"/>
+                <input type="password" placeholder="Password"/>
+                <button class="login-button">LOGIN NOW</button>
+            </div>
+        </div>
 
     </div>
 </body>
