--- a/index.html
+++ b/index.html
@@ -7,29 +7,23 @@
     <title>Document</title>
     <link href="styles.css" rel="stylesheet">
 </head>
+
 <body>
-    <svg width="0" height="0">
-        <defs>
-            <clipPath id="wavy-circle">
-                <path
-                    d="M498.523 246.291c37.941-67.923-8.514-149.499-85.88-157.204l-28.232-2.813c-20.59-2.053-38.982-10.974-54.263-28.128-53.185-59.695-152.219-44.954-184.82 26.764-7.94 17.466-22.298 31.438-40.428 39.344l-39.773 17.34c-63.399 27.64-84.894 104.334-44.848 159.183l25.236 34.563c5.481 7.508 9.482 15.807 11.893 24.666l12.532 46.073c17.167 63.115 88.755 97.22 151.241 70.693l5.35-2.271c15.901-6.751 33.992-8.387 50.932-4.616l82.048 18.269c79.933 17.798 150.39-51.574 132.54-127.825l-10.384-44.351c-4.203-17.953-1.524-36.78 7.544-53.012l9.312-16.675z">
-            </clipPath>
-        </defs>
-    </svg>
+
+    <img src="./check1.png" id="background-img" alt="stars">
     <div class="background">
-        <div class="fancy-hole" id="overlay-hole"></div>
-            <div class="fancy-hole">
-                <img src="./intro2.gif" alt="Fancy Background">
-            </div>
-        <div class="login-container">
-            <h4 id="welcome">Welcome To</h1>
+        <svg id="wavy-circle"xmlns="http://www.w3.org/2000/svg" width="200" height="200" fill="none" viewBox="0 0 54 54" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.dev/svgjs"><path fill="url(&quot;#SvgjsLinearGradient1754&quot;)" d="M48 18c1.9-8.5-4.2-14.2-12.9-11.8-4.8-7.7-13-7.7-17.5-.2C9.1 4.2 3.5 10.2 5.8 18.8c-7.6 4.7-7.6 12.9-.2 17.4C3.7 44.7 9.8 50.4 18.5 48c4.8 7.7 13 7.7 17.5.2C44.5 50 50.1 44 47.8 35.4c7.6-4.7 7.5-12.9.2-17.4Z"></path><defs><linearGradient gradientTransform="rotate(0 0.5 0.5)" id="SvgjsLinearGradient1754"><stop stop-opacity=" 1" stop-color="rgba(253, 237, 255)" offset="0"></stop><stop stop-opacity=" 1" stop-color="rgba(204, 248, 247)" offset="0.3264996337890625"></stop><stop stop-opacity=" 1" stop-color="rgba(84, 183, 241)" offset="0.9864996337890625"></stop></linearGradient></defs></svg>
+        <img src="./intro3.gif" alt="Fancy Background">
+   
+    <div class="login-container">
+        <h4 id="welcome">Welcome To</h1>
             <h1 id="family-cloud-heading">Our Family Cloud</h1>
             <div class="login-form">
-                <input type="text" placeholder="Username"/>
-                <input type="password" placeholder="Password"/>
+                <input type="text" placeholder="Username" />
+                <input type="password" placeholder="Password" />
                 <button class="login-button">LOGIN NOW</button>
             </div>
-        </div>
+    </div>
 
     </div>
 </body>
