--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
     <img src="./check1.png" id="background-img" alt="stars">
     <div class="background">
-        <svg id="wavy-circle"xmlns="http://www.w3.org/2000/svg" width="200" height="200" fill="none" viewBox="0 0 54 54" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.dev/svgjs"><path fill="url(&quot;#SvgjsLinearGradient1754&quot;)" d="M48 18c1.9-8.5-4.2-14.2-12.9-11.8-4.8-7.7-13-7.7-17.5-.2C9.1 4.2 3.5 10.2 5.8 18.8c-7.6 4.7-7.6 12.9-.2 17.4C3.7 44.7 9.8 50.4 18.5 48c4.8 7.7 13 7.7 17.5.2C44.5 50 50.1 44 47.8 35.4c7.6-4.7 7.5-12.9.2-17.4Z"></path><defs><linearGradient gradientTransform="rotate(0 0.5 0.5)" id="SvgjsLinearGradient1754"><stop stop-opacity=" 1" stop-color="rgba(253, 237, 255)" offset="0"></stop><stop stop-opacity=" 1" stop-color="rgba(204, 248, 247)" offset="0.3264996337890625"></stop><stop stop-opacity=" 1" stop-color="rgba(84, 183, 241)" offset="0.9864996337890625"></stop></linearGradient></defs></svg>
-        <img src="./intro3.gif" alt="Fancy Background">
-   
+     <img src="./laptop.png" alt="" id="laptop">   
+    <img src="./programmer.png" alt="" id="programmer">
+    <img src="./coder.png" alt="" id="coder">
     <div class="login-container">
         <h4 id="welcome">Welcome To</h1>
             <h1 id="family-cloud-heading">Our Family Cloud</h1>
