--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
     <img src="./check1.png" id="background-img" alt="stars">
     <div class="background">
-     <img src="./laptop.png" alt="" id="laptop">   
-    <img src="./programmer.png" alt="" id="programmer">
-    <img src="./coder.png" alt="" id="coder">
+     <img src="./laptop.png" alt="" id="laptop" class="media-icon">   
+    <img src="./programmer.png" alt="" id="programmer" class="media-icon">
+    <img src="./coder.png" alt="" id="coder" class="media-icon">
     <div class="login-container">
         <h4 id="welcome">Welcome To</h1>
             <h1 id="family-cloud-heading">Our Family Cloud</h1>
